[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/others/BeahcBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/objects/2background.jpg" type="Texture" id=2]
[ext_resource path="res://assets/sprites/objects/white-background.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/message-1.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/sprites/objects/1background.jpg" type="Texture" id=5]
[ext_resource path="res://assets/fonts/button-2.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/fonts/title.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/fonts/button-1.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/sprites/objects/happy.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/objects/3background.jpg" type="Texture" id=10]
[ext_resource path="res://assets/fonts/button-3.tres" type="DynamicFont" id=11]
[ext_resource path="res://src/scenes/Write.gd" type="Script" id=12]
[ext_resource path="res://src/actor/Actor.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/sprites/objects/sad.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/objects/fear.png" type="Texture" id=15]

[node name="Write" type="Node2D"]
script = ExtResource( 12 )

[node name="BeachBackground" parent="." instance=ExtResource( 1 )]

[node name="white-background" type="Sprite" parent="."]
modulate = Color( 0.964706, 0.952941, 0.898039, 1 )
position = Vector2( 1137.5, 622.762 )
scale = Vector2( 3.9887, 3.12446 )
texture = ExtResource( 3 )

[node name="GroupButton" type="Node2D" parent="."]

[node name="Paper1" type="TextureButton" parent="GroupButton"]
margin_left = 582.201
margin_top = 358.132
margin_right = 704.201
margin_bottom = 457.132
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paper2" type="TextureButton" parent="GroupButton"]
margin_left = 734.936
margin_top = 356.426
margin_right = 856.936
margin_bottom = 455.426
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paper3" type="TextureButton" parent="GroupButton"]
margin_left = 891.083
margin_top = 354.226
margin_right = 1013.08
margin_bottom = 453.226
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GroupButton"]
margin_left = 1267.05
margin_top = 362.009
margin_right = 1386.05
margin_bottom = 453.009
custom_fonts/font = ExtResource( 8 )
text = "1"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="GroupButton"]
margin_left = 1412.28
margin_top = 362.499
margin_right = 1531.28
margin_bottom = 453.499
custom_fonts/font = ExtResource( 6 )
text = "2"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="GroupButton"]
margin_left = 1557.08
margin_top = 360.499
margin_right = 1676.08
margin_bottom = 451.499
custom_fonts/font = ExtResource( 11 )
text = "3"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GroupButton"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 600.0
margin_top = 292.0
margin_right = 788.0
margin_bottom = 332.0
custom_fonts/font = ExtResource( 7 )
text = "Escolha o papel "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GroupButton"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1254.0
margin_top = 296.0
margin_right = 1700.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 7 )
text = "Escolha o estilo de letra"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="TextureRect" parent="."]
pause_mode = 2
margin_left = 580.0
margin_top = 520.0
margin_right = 1687.0
margin_bottom = 922.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box" type="Sprite" parent="container"]
position = Vector2( 559.704, 204.736 )
scale = Vector2( 3.47631, 1.52411 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 642.041
margin_top = 570.224
margin_right = 899.041
margin_bottom = 616.224
custom_fonts/font = ExtResource( 4 )
text = "Eu estou"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feeling" type="Label" parent="Label"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 247.613
margin_top = 5.77551
margin_right = 339.613
margin_bottom = 53.7755
custom_fonts/font = ExtResource( 4 )
text = "feliz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Label"]
anchor_right = 0.249
anchor_bottom = 0.304
margin_left = 334.487
margin_top = 5.4447
margin_right = 450.494
margin_bottom = 35.4607
custom_fonts/font = ExtResource( 4 )
text = "porque"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FellingButton" type="TextureButton" parent="."]
margin_left = 813.541
margin_top = 576.0
margin_right = 869.541
margin_bottom = 622.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 650.827
margin_top = 632.673
margin_right = 1467.82
margin_bottom = 862.673
custom_fonts/font = ExtResource( 4 )
custom_colors/member_variable_color = Color( 0.972549, 0.937255, 0.937255, 1 )
custom_colors/code_folding_color = Color( 0.960784, 0.952941, 0.952941, 1 )
custom_colors/function_color = Color( 0.980392, 0.976471, 0.976471, 1 )
custom_colors/caret_background_color = Color( 0.964706, 0.941176, 0.941176, 1 )
custom_colors/selection_color = Color( 0.705882, 0.701961, 0.988235, 1 )
custom_colors/breakpoint_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/background_color = Color( 1, 1, 1, 1 )
custom_colors/completion_background_color = Color( 0.972549, 0.941176, 0.941176, 1 )
custom_colors/current_line_color = Color( 1, 0.996078, 0.996078, 1 )
syntax_highlighting = true
breakpoint_gutter = true
override_selected_font_color = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = -10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.529412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0.678431, 0.654902, 0.654902, 1 )
position = Vector2( 1138.35, 657.99 )
scale = Vector2( 3.69051, 2.6765 )
texture = ExtResource( 3 )

[node name="happy" type="TextureButton" parent="CanvasLayer"]
pause_mode = 2
margin_left = 689.165
margin_top = 552.618
margin_right = 804.165
margin_bottom = 651.618
button_mask = 7
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panic" type="TextureButton" parent="CanvasLayer"]
pause_mode = 2
margin_left = 1043.4
margin_top = 554.4
margin_right = 1158.4
margin_bottom = 653.4
mouse_filter = 1
action_mode = 0
button_mask = 7
texture_normal = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sad" type="TextureButton" parent="CanvasLayer"]
pause_mode = 2
margin_left = 1382.28
margin_top = 557.964
margin_right = 1497.28
margin_bottom = 656.964
action_mode = 0
button_mask = 7
texture_normal = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelHappy" type="Label" parent="CanvasLayer"]
margin_left = 705.509
margin_top = 677.055
margin_right = 864.509
margin_bottom = 725.055
custom_fonts/font = ExtResource( 7 )
text = "feliz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelHappy2" type="Label" parent="CanvasLayer"]
margin_left = 1010.2
margin_top = 675.273
margin_right = 1213.2
margin_bottom = 723.273
custom_fonts/font = ExtResource( 7 )
text = "com medo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labelHappy3" type="Label" parent="CanvasLayer"]
margin_left = 1402.19
margin_top = 678.837
margin_right = 1561.19
margin_bottom = 726.837
custom_fonts/font = ExtResource( 7 )
text = "triste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealeseButton" type="Button" parent="."]
margin_left = 974.524
margin_top = 900.643
margin_right = 1172.52
margin_bottom = 961.643
custom_fonts/font = ExtResource( 7 )
button_mask = 7
text = "Colocar no Bal√£o"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actor" parent="." instance=ExtResource( 13 )]
position = Vector2( 245.795, 620.845 )

[connection signal="pressed" from="GroupButton/Paper1" to="." method="_on_Paper1_pressed"]
[connection signal="pressed" from="GroupButton/Paper2" to="." method="_on_Paper2_pressed"]
[connection signal="pressed" from="GroupButton/Paper3" to="." method="_on_Paper3_pressed"]
[connection signal="pressed" from="GroupButton/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GroupButton/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="GroupButton/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="FellingButton" to="." method="_on_FellingButton_pressed"]
[connection signal="button_up" from="CanvasLayer/happy" to="." method="_on_happy_button_up"]
[connection signal="pressed" from="CanvasLayer/happy" to="." method="_on_happy_pressed"]
[connection signal="pressed" from="CanvasLayer/panic" to="." method="_on_panic_pressed"]
[connection signal="pressed" from="CanvasLayer/sad" to="." method="_on_sad_pressed"]
[connection signal="pressed" from="RealeseButton" to="." method="_on_RealeseButton_pressed"]
